--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.header-wrap{background:#84DEF1;}
+.menu{margin-top: 20px;}
+.header{}
+.header h4{
+  font-weight: 700;
+  margin-top: 15px;
+  font-size: 24px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu ul{
+  list-style: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-end;
 }
-
-.App-link {
-  color: #61dafb;
+.menu ul li{margin-left:35px;}
+.menu ul li:last-child {
+  padding: 8px 25px;
+  margin-top: -5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu ul li a{
+  text-decoration: none;
+  color:#000;
 }
+li.login {background-color: #FF6A48; color:#fff;}
